# ems-handoff-app

./: .gitignore  ARCHITECTURE.md  ENTERPRISE_PRODUCTION_ARCHITECTURE.md  README.md  main.py  pyproject.toml
.github/workflows/: azure-static-web-apps-gray-river-0aac47b0f.yml  azure-static-web-apps-red-cliff-065686a0f.yml
docs/: ENGINEERING_LOG.md  TECHNICAL_REFERENCE.md
src/api/: function_app.py  host.json  models.py  requirements.txt  shared_clients.py
src/api/blueprints/: __init__.py  active_handoffs_bp.py  arrival_bp.py  chat_bp.py  comment_bp.py  divert_handoff_bp.py  ecg_bp.py  ems_negotiate_bp.py  fetch_archive_bp.py  ingestion_bp.py  negotiate_bp.py  recover_handoff_bp.py  streaming_bp.py
src/frontend/ems-ingestion/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/ems-ingestion/public/: manifest.json  (+1 more)
src/frontend/hospital-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
src/shared/schemas/: FHIR-patient-schema-v1.json
tests/ems-arrival-archival/: cleanhandoff-ems-arrival-archival-v1.json  ems-arrival-TEST_RESULTS.md  unknownhandoff-ems-arrival-v1.json
tests/ems-signalr-streaming/: ems-arrival-stream-test-v1.json  ems-to-db-stream-test-v1.json  streaming-signalr-TEST_RESULTS.md
tests/ems-to-db-ingestion/: cleanhandoff-ems-to-db-v1.json  dirtyhandoff-ems-to-db-v1.json  ems-to-db-TEST_RESULTS.md  unknownhandoff-ems-to-db-v1.json
tests/hospital-dashboard/: hospital-dashboard-TEST_RESULTS.md  test-cedar-1.json  test-pav-1.json  test-pav-2.json  test-presby-1.json  test-presby-2.json
(+68 files in other folders)
